test/typeCheckTest/fail/test34.ic
class BadOr {
	void main (string [] args) {
		boolean b = "hi" || 2;
	}
}